# fenwick-semi

./: README.md  fenwick-semi.cabal  fenwick.cabal
src/: FenwickSemi.hs  FenwickTree.hs
src/Data/: FenwickSemi.hs
tests/: TestFenwickSemi.hs
