name:                fenwick-semi
version:             0.1.0.0
synopsis:            Fenwick trees over semigroups

homepage:            https://github.com/davnils/fenwick-semi
license:             BSD3
license-file:        LICENSE
author:              David Nilsson
maintainer:          nilsson.dd+code@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Data.FenwickSemi
  build-depends:       base >=4.5 && < 4.7,
                       semigroups == 0.9.* 
